# UCLA_24

./: .envrc  .gitignore  README.md  pyproject.toml  run_nlp.py
.claude/: settings.json
code/notebooks/: main.ipynb  ucla2bids.ipynb
code/scripts/: align_spike_derivatives_bids.py  decode_characters.py  extract_dinov3_frame_features.py  film_brain_viewer_mp4.py  film_brain_viewer_pyvista_mp4.py  film_brain_viewer_singleunit_mp4.py  job.sh  run_dinov3_multi_layers.sh  run_nlp copy.py  run_nlp.py  ucla2bids.py
code/src/: main.py  plotter.py  preprocessing.py  utils.py
code/src/decoding/: data.py  model.py  train.py
code2/scripts/: decode_concepts.py  decode_concepts_habilis.py  submit_decode_concepts.slurm
code2/src/decoding/: data.py  model.py  preprocessing.py  train.py  train_habilis.py
code3_Zhang_2023/: requirements-vision.txt
code3_Zhang_2023/config/: characters.yaml  cluster_assignments.example.json
code3_Zhang_2023/scripts/: decode_characters.py  run_full_pipeline.py  run_vision_pipeline.py  submit_decode_characters.slurm  submit_full_pipeline.slurm
code3_Zhang_2023/src/: zhang2023_constants.py
code3_Zhang_2023/src/decoding/: data.py  model.py  train.py
code3_Zhang_2023/src/vision/: config.py  export.py  io.py  pipeline.py  sort_tracker.py  stage1_detect_track.py  stage2_cluster.py  stage3_assign.py  stage4_resnet.py  yolo_detect.py
code4_Zhang_2023_bis/scripts/: concept_selectivity.py  decode_characters.py  ding_selectivity.py  submit_decode_characters.slurm  unit_selectivity.py
code4_Zhang_2023_bis/src/: constants.py
code4_Zhang_2023_bis/src/decoding/: data.py  model.py  splits.py  train.py
data/: 24_S06E01.srt  24_S06E01_8concepts_merged.csv  24_S06E01_8concepts_merged_README.txt  24_S06E01_MASTER.Textgrid  24_S06E01_subtitles.txt  24_S06E01_words.csv  40m_act_24_S06E01_30fps_characters.csv  40m_act_24_S06E01_30fps_characters_README.txt  data.json
outputs_jeanzay/decoding/: sub-572_ses-01_decoding_results.json
